src/objects/News__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>企業</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>News</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>イベント</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipName>News</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FullDescription__c</fullName>
        <label>内容</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Introduction__c</fullName>
        <label>概要</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MainImageURL__c</fullName>
        <label>Main Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ValidFrom__c</fullName>
        <label>公開開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ValidUntil__c</fullName>
        <label>公開終了日</label>
        <type>Date</type>
    </fields>
    <label>ニュース</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>News Title</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>